Bug 164794 - When the option "Current Module Only" is active, it is not shown in Recent Documents submenu when in edit macro mode
Summary: When the option "Current Module Only" is active, it is not shown in Recent Do...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0 target:25.2.5 target:25...
Keywords: implementationError
: 166671 (view as bug list)
Depends on:
Blocks: Recent-Document-List
  Show dependency treegraph
 
Reported: 2025-01-21 23:09 UTC by rertini
Modified: 2025-05-28 14:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rertini 2025-01-21 23:09:15 UTC
Description:
On Edit macro Window, File->Recent Documents shows "No Documents"


Actual Results:
No Documents displayed

Expected Results:
List of recent documents


Reproducible: Always


User Profile Reset: No

Additional Info:
Opening File Recent from Calc window, shows all recent documents correctly
Comment 1 BogdanB 2025-01-22 05:58:55 UTC
I confirm this.
In File - Recent Documents from Start Center, I have a file. If I open Edit Macro, in File - Recent Documents I don't have any document.

Version: 25.2.0.1 (X86_64) / LibreOffice Community
Build ID: ddb2a7ea3a8857aae619555f1a8743e430e146c9
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 2 Buovjaga 2025-01-22 08:14:09 UTC
Solved in 25.2 by using this toggle now found in the menu: bug 161725

In earlier versions it can be controlled via the expert option ShowCurrentModuleOnly.

However, if the option is in a checked state, the Recent Documents submenu in the *macro editor view* does not show the option at all. So I would change this issue to be about that.
Comment 3 BogdanB 2025-01-22 13:29:09 UTC
It's not specific just on MacOS.
Comment 4 Buovjaga 2025-01-22 14:16:33 UTC
Don't change my improved summary, please.
Comment 5 Commit Notification 2025-05-21 06:02:53 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c47278ba0648f83a828167715cd71d000d20f6a3

tdf#164794 - Show complete list of recent documents in the macro window

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Andreas Heinisch 2025-05-21 11:24:42 UTC
*** Bug 166671 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2025-05-25 17:37:46 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/8e28d48dc821dd016defded2f6f881b1fae4030b

tdf#164794 - Show complete list of recent documents in the macro window

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-05-27 10:55:48 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-4":

https://git.libreoffice.org/core/commit/85e374fb41f9d4b40274934e4e9c690bab3d4d7b

tdf#164794 - Show complete list of recent documents in the macro window

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.