tdf#164794 - Show complete list of recent documents in the macro window

Change-Id: I7da0d13f4680bee0df50c57264e0263d0ab5c923
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185580
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins